--- a/botones.html
+++ b/botones.html
@@ -24,7 +24,7 @@
 
     <nav class="menu">
         <a href="index.html">🏠 Carta</a>
-        <a href="carrusel.html">📸 Carrusel</a>
+        <!-- <a href="carrusel.html">📸 Carrusel</a> -->
         <a href="gustos.html">🌸 Lo que amo de ti</a>
     </nav>
 
