--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <nav class="menu">
-        <a href="carrusel.html">📸 Carrusel</a>
+        <!-- <a href="carrusel.html">📸 Carrusel</a> -->
         <a href="botones.html">💗 ¿Me Amas?</a>
         <a href="gustos.html">🌸 Lo que amo de ti</a>
     </nav>
