--- a/gustos.html
+++ b/gustos.html
@@ -1,11 +1,92 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lo que más me gusta de ti 💘</title>
   <link rel="stylesheet" href="css/estilo.css" />
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: "Poppins", sans-serif;
+      color: #fff;
+
+      /* 💗 Fondo principal (degradado elegante) */
+      background: radial-gradient(circle at top left,
+          #b30059 0%,
+          /* vino intenso */
+          #d63384 30%,
+          /* fucsia profundo */
+          #e75480 60%,
+          /* rosa pasión */
+          #ff8fa3 100%
+          /* rosado cálido */
+        );
+
+      overflow-x: hidden;
+      overflow-y: auto;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+    }
+
+    /* 🌹 Gif de fondo pequeño, centrado y sin bordes */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 62%;
+      left: 60%;
+      width: 40vw;
+      height: 40vw;
+      max-width: 300px;
+      max-height: 300px;
+      background: url("imagenes/myMelody.gif") no-repeat center center;
+      background-size: contain;
+      transform: translate(-50%, -50%);
+      opacity: 0.4;
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    .love-card {
+      position: relative;
+      z-index: 1;
+    }
+
+    /* 📱 Responsivo */
+    @media (max-width: 768px) {
+      body::before {
+        top: 65%;
+        left: 50%;
+        width: 55vw;
+        height: 55vw;
+        max-width: 240px;
+        max-height: 240px;
+        opacity: 0.35;
+        /* un poco más suave para pantallas chicas */
+      }
+    }
+
+    @media (max-width: 480px) {
+      body::before {
+        top: 70%;
+        left: 50%;
+        width: 65vw;
+        height: 65vw;
+        max-width: 200px;
+        max-height: 200px;
+        opacity: 0.3;
+      }
+    }
+  </style>
 </head>
+
 <body>
   <div class="card love-card">
     <div class="header">
@@ -13,8 +94,6 @@
     </div>
 
     <div id="gustos-lista" class="gustos-lista"></div>
-
-    <!-- <button id="btnAgregar" class="add-btn">➕ Agregar algo más</button> -->
 
     <nav class="menu">
       <a href="index.html">🏠 Carta</a>
@@ -25,4 +104,5 @@
   <div id="hearts"></div>
   <script src="js/gustos.js"></script>
 </body>
+
 </html>
