--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Carta para mi amor</title>
+    <title>Ximena</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
@@ -18,6 +18,12 @@
             <h1>Para Mi Amor</h1>
         </header>
 
+        <nav class="menu">
+            <!-- <a href="carrusel.html">📸 Carrusel</a> -->
+            <a href="botones.html">💗 ¿Me Amas?</a>
+            <a href="gustos.html">🌸 Lo que amo de ti</a>
+        </nav>
+
         <div class="letter">
             <div class="typed" id="typed"></div><span class="cursor" id="cursor"></span>
         </div>
@@ -25,11 +31,7 @@
         <footer>— Con todo mi cariño, Nicolas Astudillo</footer>
     </div>
 
-    <nav class="menu">
-        <!-- <a href="carrusel.html">📸 Carrusel</a> -->
-        <a href="botones.html">💗 ¿Me Amas?</a>
-        <a href="gustos.html">🌸 Lo que amo de ti</a>
-    </nav>
+
 
     <script src="js/main.js"></script>
 </body>
