--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <header class="header">
             <div class="logo-heart">💖</div>
-            <h1>Para Mi Amor</h1>
+            <h1>Para Mi Amor Ximena</h1>
         </header>
 
         <nav class="menu">
